docs: describe the real reason the job suspend walk skips call activities
The walker's javadoc and its test comments said the processInstanceKey
filter stopped the walk at call activity boundaries. That described a
mechanism that is not actually in force: a called child instance's root
element instance never gets a parentKey link to the call activity at
all (its flowScopeKey defaults to -1, which resolves to no element
instance), so ElementInstanceState.getChildren never even hands the
walker a child-instance element to filter out. There is no tree edge to
cross in the first place.

Reworded the javadoc to explain that absence-of-link mechanism, why the
boundary matters (the suspension marker is keyed by the suspended
instance alone, so the child's own commands are not gated by it), and
that the filter is a defensive invariant check that is not exercised by
any test today. Reworded shouldNotSuspendJobOfCalledChildInstance's
comment to match, and pointed to the walker's javadoc for the "why".

Also fixed shouldNotSuspendActivatedJob: it took only the first
Job.SUSPENDED record for the instance off the exporter, so it could not
tell a correct single suspension from a regression that also parks the
already-activated job, if the wrong job's event happened to come first.
It now reads every already-exported Job.SUSPENDED record for the
instance and asserts on the full key set.

No behavioral change to the walker or the suspend processor.